[package]
name = "kdl_config_derive"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
stringcase = "0.4.0"

[dev-dependencies]
kdl_config = { path = "../kdl_config" }
kdl = "6.3.3"
miette = { version = "7.4.0", features = ["fancy"] }
